--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint ./ --fix"
   },
   "dependencies": {
+    "@crello/react-lottie": "^0.0.11",
     "next": "latest",
+    "proptypes": "^1.1.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
