--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@crello/react-lottie": "^0.0.11",
+    "framer-motion": "^3.2.2-rc.1",
     "next": "latest",
-    "proptypes": "^1.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
